# c4beta

./: .gitignore  Makefile  README.org  build_glob.sh  c4beta.cabal  clean.sh  stack.yaml  testblob.js
app/: Main.hs
src/: Lib.hs  RegPool.hs  Scope.hs  Types.hs  notes.org
src/XV6/: Buf.hs
test/test-cases/: dosquare1.c  first.bc  first.c  first.ll  first.s  if1.c  if1.c.uasm  if2.c  if3.c  if3.c.uasm  square1.c
