name:                c4beta
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/drhodes/c4beta#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Rhodes
maintainer:          physci@gmail.com
copyright:           No.
category:            Yes.
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , RegPool
  build-depends:       base >= 4.7 && < 5
                     , language-c >= 0.4.7
                     , language-c >= 0.4.7
                     , pretty >= 1.1.2.0
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable c4beta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , c4beta
                     , language-c >= 0.4.7
                     , language-c >= 0.4.7
                     , pretty >= 1.1.2.0
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

test-suite c4beta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , c4beta
                     , language-c >= 0.4.7
                     , language-c >= 0.4.7
                     , pretty >= 1.1.2.0
                     , transformers >= 0.4.2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/drhodes/c4beta
